--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -220,7 +220,7 @@
             <p>Šprtárna: 10. 1. – 1. 2.</p>
             <p>Masakr: 1. 2. – 15. 3.</p>
             <p><strong>Cena kurzů:</strong></p>
-            <p>Šprna: </p>
+            <p>Šprtárna: </p>
             <p>Masakr: </p>
           </div>
         </div>
