--- a/app/templates/kontakt.html
+++ b/app/templates/kontakt.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kontakt</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+  <link rel="icon" type="image/jpeg" href="{{ url_for('static', filename='img/favicon.jpg') }}">
   <style>
     .kontakt-wrapper {
       background-color: #eef0f2; 
