--- a/app/templates/lektori.html
+++ b/app/templates/lektori.html
@@ -7,6 +7,7 @@
   <title>Naši lektoři – Studenti studentům</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='lektori.css') }}">
+  <link rel="icon" type="image/jpeg" href="{{ url_for('static', filename='img/favicon.jpg') }}"> 
   <style>
 .lektori-container {
   max-width: 1000px;
