--- a/app/templates/prevod.html
+++ b/app/templates/prevod.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Studenti studentům – Bankovní převod</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+  <link rel="icon" type="image/jpeg" href="{{ url_for('static', filename='img/favicon.jpg') }}">
 </head>
 <body class="dark-bg">
   <header>
