--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -158,7 +158,7 @@
             Dalším cílem je aktivizovat studenty středních škol napříč Českou republikou...
         </p>
 
-        <h3>Základní pravidla festivalu</h3>
+        <h3>Základní pravidla festivalu idk</h3>
         <p>
             Základním pravidlem festivalu je, že bude plně v režii studentů...
         </p>
