--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -207,7 +207,8 @@ header {
 }
 .btn-lektori {
   display: inline-block;
-  margin: 1rem 0;
+  margin-top : 1em;
+  margin-bottom : 0.5em;
   background-color: #ff6392;
   color: white;
   padding: clamp(0.4rem, 0.7vw, 0.7rem) clamp(1rem, 1.5vw, 1.5rem);
